# bbadventures

./: .gitignore  .gitmodules  .timetracker  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  memcheck.txt
.github/workflows/: build.yml
assets/aseprite/: player.json
assets/config/: audio.ini  window.ini
assets/img/: debugPlayer.aseprite  player2.aseprite
assets/tiled/: debugSouth.tmj  debugTown.tmj  debugTownHome.tmj  goonRpg.tiled-project  goonRpg.tiled-session
cmake/: AppIcon.icns  Info.plist
src/BbAdventures/: main.cpp
src/BbAdventures/aseprite/: AsepriteAnimation.cpp  AsepriteAnimation.hpp  AsepriteDocument.cpp  AsepriteDocument.hpp
src/BbAdventures/base/: GameObject.cpp  GameObject.hpp
src/BbAdventures/components/: AnimationComponent.hpp  BoxColliderComponent.hpp  CameraComponent.hpp  DebugDrawComponent.hpp  InteractorComponent.hpp  LocationComponent.hpp  PlayerComponent.hpp  PlayerExitComponent.hpp  PlayerSpawnComponent.hpp  RigidBodyComponent.hpp  SolidObjectComponent.hpp  TextInteractionComponent.hpp
src/BbAdventures/entities/: Camera.cpp  Camera.hpp  Player.cpp  Player.hpp  PlayerExit.cpp  PlayerExit.hpp  PlayerStart.cpp  PlayerStart.hpp  Solid.cpp  Solid.hpp  SpawnMap.cpp  TextInteraction.cpp  TextInteraction.hpp
src/BbAdventures/shared/: constants.cpp  constants.hpp  state.cpp  state.hpp
src/BbAdventures/systems/: AsepriteSystem.cpp  CameraSystem.cpp  DebugDrawSystem.cpp  InteractionSystem.cpp  PlayerSystem.cpp  Systems.hpp
src/BbAdventures/tiled/: Level.cpp  Level.hpp  TiledLevel.cpp  TiledLevel.hpp  TiledMap.cpp  TiledMap.hpp
src/BbAdventures/tween/: Tween.cpp  Tween.hpp
src/BbAdventures/ui/: Panel.cpp  Panel.hpp  Textbox.cpp  Textbox.hpp  Ui.cpp  Ui.hpp
src/GoonWorld/: main.cpp
terraform/: backend.tf  cloudfront.tf  s3.tf
